v11 data updates and corrections

--- a/output/Com.html
+++ b/output/Com.html
@@ -1,4 +1,4 @@
-<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoovers Online</a></b></p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoover's Online</a></b></p>
 <p>Provides comprehensive Company and Industry profiles, in-depth financials, Company overviews and histories, information on competitors, Products, services and operations. "Build a List" option allows screening for companies based on several variables.</p>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></b></p>
 <div style='font-size: 90%'><p><em>Note: To access Company Profiles, click on link from the "More" option menu top of screen (in the blue band) to search for Company profiles by Company name.</em></p></div>
