--- a/output/Fin.html
+++ b/output/Fin.html
@@ -1,7 +1,17 @@
 <p><b>Bloomberg</b></p>
 <div style='font-size: 90%'><p><em>Note: Access via the Bloomberg terminals in 1318 Van Munching Hall.</em></p></div>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
-<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoovers Online</a></b></p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://library.morningstar.com/'>Morningstar</a></b></p>
+<div style='font-size: 90%'><p><em>Note: Licensing restrictions limit use to 4 simultaneous users. If you are unable to access this database, please try again later. Screening for stocks and mutual funds available using many different data points.</em></p></div>
+<p>Morningstar's data and analyst reports cover more than 20,000 securities, including stocks and mutual funds.</p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www3.valueline.com/is/rc.aspx'>ValueLine (ValueLine Investment Survey)</a></b></p>
+<p>Provides investment research on stocks, mutual funds, options and convertibles.</p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.netadvantage.standardpoor.com/'>Standard &amp; Poor's Net Advantage</a></b></p>
+<p>Provides reports, forecasts, analysis, statistics and ratios of major industries. Coverage is for current and up to 4 years, depending on the Industry.</p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoover's Online</a></b></p>
 <p>Provides comprehensive Company and Industry profiles, in-depth financials, Company overviews and histories, information on competitors, Products, services and operations. "Build a List" option allows screening for companies based on several variables.</p>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://global.factiva.com/en/sess/login.asp?xsid=S003Wvf1WFo5DEs5DEmM9YuNTAvODFyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA'>Factiva</a></b></p>
 <p>From Dow Jones. Provides full text access to over 8,000 business sources including national and international newspapers, magazines, wire services, web sites and Industry (trade) sources. Includes coverage of the Wall Street Journal. NOTE: Licensing restrictions limit use to 12 simlutaneous users. If you are unable to access this database, please try again later.</p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.lexisnexis.com/us/lnacademic'>LexisNexis Academic</a></b></p>
+<div style='font-size: 90%'><p><em>Note: Does NOT include access the Wall Street Journal (WSJ). The WSJ is contained in Factiva and National Newspapers Core.</em></p></div>
+<p>Covers business topics from local, regional and national newspapers, some trade publications, business magazines, SEC filings, some reference sources, key accounting sources, legal information as well as SWOT analysis. To access SWOT information, click on Companies and then Company Profiles. Type name of Company in first box, select "Company name" from drop down box; in second box, type SWOT. To access business news, click on News and then Business.</p>
