--- a/output/rel-dem.html
+++ b/output/rel-dem.html
@@ -1,5 +1,6 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/topics#laboreconomics'>Labor Economics</a></li>
-<li><a href='/vbic/topics#populationandhousingdata'>Population and Housing Data</a></li>
+<li><a href='/vbic/topics#demographics'>Demographics</a></li>
+<li><a href='/vbic/topics#statisticsinternational'>Statistics: International</a></li>
+<li><a href='/vbic/topics#statisticsunitedstates'>Statistics: United States</a></li>
 </ul>
