--- a/output/rel-ind.html
+++ b/output/rel-ind.html
@@ -7,6 +7,7 @@
 <li><a href='/vbic/topics#statisticsunitedstates'>Statistics: United States</a></li>
 <li><a href='/vbic/topics#competitors'>Competitors</a></li>
 <li><a href='/vbic/topics#marketshare'>Market Share</a></li>
-<li><a href='/vbic/topics#industryanalysismodels'>Industry Analysis Models</a></li>
+<li><a href='/vbic/topics#marketsize'>Market Size</a></li>
+<li><a href='/vbic/topics#industryanalysis'>Industry Analysis</a></li>
 <li><a href='/vbic/topics#regulations'>Regulations</a></li>
 </ul>
