--- a/output/res-by-title.html
+++ b/output/res-by-title.html
@@ -2,6 +2,10 @@
 <h3 id='A'>A</h3>
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip,uid&profile=ehost&defaultdb=aph'>Academic Search Premier</a></li>
+<li><a href='http://library.duke.edu/digitalcollections/adaccess/'>Ad Access</a></li>
+<li><a href='http://www.adcouncil.org/About-Us/'>Ad Council</a></li>
+<li><a href='http://library.duke.edu/digitalcollections/adviews/'>Ad View</a></li>
+<li><a href='http://www.adflip.com'>AdFlip</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://data.worldbank.org/data-catalog/africa-development-indicators'>Africa Development Indicators, World Bank</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://ageconsearch.umn.edu/'>AgEcon Search</a></li>
 <li><a href='http://factfinder2.census.gov/faces/nav/jsf/pages/index.xhtml'>American FactFinder</a></li>
@@ -49,6 +53,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://library2.cqpress.com/cqresearcher'>CQ Researcher</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.credoreference.com'>CREDO</a></li>
 <li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>CRSP: Center for Research in Security Prices</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps &mdash; CRSPSift. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu.</em>]</div></li>
+<li><a href='http://www.culturecrossing.net/basics_business_student.php?id=149'>Culture Crossing</a></li>
 </ul>
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
 <h3 id='D'>D</h3>
@@ -56,7 +61,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/KBR'>D&amp;B Key Business Ratios</a></li>
 <li><a href='http://www.usa.gov/Topics/Reference_Shelf/Data.shtml'>Data and Statistics: USA.gov</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://data-planet.conquestsystems.com/statistical/ip'>Data-Planet Statistical Datasets</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?http://readyreference.data-planet.com/dataplanet/'>Data-Planet Statistical Ready Reference</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://readyreference.data-planet.com'>Data-Planet Statistical Ready Reference</a></li>
 <li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to: helpme@rhsmith.umd.edu.</em>]</div></li>
 <li><a href='http://www.rhsmith.umd.edu//node/345'>Dingman Center for Entrepreneurship</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=https://www.uniworldbp.com/search.php'>Directory of American Firms Operating in Foreign Countries/Foreign Firms Operating in U.S</a></li>
@@ -77,6 +82,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://db.eiu.com/topic_view.asp?pubcode=IT&title=Country+Commerce'>EIU Country Commerce</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://db.eiu.com/topic_view.asp?pubcode=FF&title=Country+Finance'>EIU Country Finance</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.viewswire.com/'>EIU Viewswire</a></li>
+<li><a href='http://library.duke.edu/digitalcollections/eaa/'>Emergence of Advertising in America, 1850-1920</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://go.galegroup.com/ps/infomark.do?action=interpret&source=library&actionString=DO_DISPLAY_ABOUT_PAGE&tabID=T002&prodId=GVRL&userGroupName=umd_um&docId=CX3402799999&type=aboutBook&version=1.0&authCount=1&u=umd_um'>Encyclopedia of Business and Finance</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://go.galegroup.com/ps/aboutEbook.do?actionString=DO_DISPLAY_ABOUT_PAGE&inPS=true&prodId=GVRL&userGroupName=umd_um&searchType=BasicSearchForm&docId=GALE%7C9780787677039&contentSegment=9780787677039'>Encyclopedia of E-Commerce</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://go.galegroup.com/ps/aboutEbook.do?actionString=DO_DISPLAY_ABOUT_PAGE&inPS=true&prodId=GVRL&userGroupName=umd_um&searchType=BasicSearchForm&docId=GALE%7C9780787677251&contentSegment=9780787677251'>Encyclopedia of Small Business</a></li>
@@ -125,7 +131,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.elsevier.com/wps/find/S04.cws_home/books'>Handbooks in Economics</a></li>
 <li><a href='http://www.usitc.gov/tata/hts/bychapter/index.htm'>Harmonized Tariff Schedule (HTF) Codes</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://hsus.cambridge.org'>Historical Statistics of the United States</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoovers Online</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoover's Online</a></li>
 <li><a href='http://hdr.undp.org/en/countries/'>Human Development Report</a></li>
 </ul>
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
@@ -207,7 +213,7 @@
 <h3 id='P'>P</h3>
 <ul>
 <li><a href='http://psidonline.isr.umich.edu/default.aspx'>Panel Study of Income Dynamics (PSID)</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.portal.euromonitor.com'>Passport</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.portal.euromonitor.com'>Passport</a> <div style='font-size: 90%'>[<em>Note: This resource requires a campus login for access.</em>]</div></li>
 <li><a href='http://lib.guides.umd.edu/patent_tm'>Patents and Trademarks</a></li>
 <li><a href='http://www.census.gov/people/'>Population and Household</a></li>
 <li><a href='http://www.mindtools.com/pages/article/newTMC_08.htm'>Porter's Five Forces: Assessing the Balance of in a Business Situation</a></li>
@@ -239,6 +245,7 @@
 <ul>
 <li><a href='http://www.schwabfound.org/sf/index.htm'>Schwab Foundation for Social Entrepreneurship</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://webofknowledge.com/?DestApp=WOS&editions=SCI'>Science Citation Index Expanded &ndash; Web of Science</a></li>
+<li><a href='http://scorechicago.org/'>Service Corps of Retired Executives (SCORE)</a></li>
 <li><a href='http://www.sba.gov/'>Small Business Administration</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://webofknowledge.com/WOS'>Social Science Citation Index &ndash; Web of Science</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.oecd-ilibrary.org'>Source OECD</a></li>
@@ -249,7 +256,7 @@
 <li><a href='http://www.standardandpoors.com/home/en/us'>Standard &amp; Poor's</a></li>
 <li><a href='http://www.osha.gov/pls/imis/sicsearch.html'>Standard Industrial Classification System (SIC)</a></li>
 <li><a href='http://www.census.gov/sdc/'>State Data Centers</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.census.gov/compendia/statab/'>Statistical Abstract of the United States</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.census.gov/compendia/statab/'>Statistical Abstracts of the United States</a></li>
 <li><a href='http://www.census.gov/mp/www/cat/foreign_trade/schedule_b_--_statistical_classification_of_domestic_and_foreign_commodities_exported_from_the_unite.html'>Statistical Classification of Domestic and Foreign Commodities Exported from the United States (Schedule B)</a></li>
 <li>Statistical DataSets (ProQuest) &mdash; Replaced by Data-Planet Statistical Datasets.</li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.lexisnexis.com/statuniv'>Statistical Insight (ProQuest)</a> <div style='font-size: 90%'>[<em>Note: Formerly called Lexis/Nexis Statistical Insight.</em>]</div></li>
@@ -268,6 +275,7 @@
 <li>Thomson Reuters Institutional Holdings (13F) <div style='font-size: 90%'>[<em>Note: Access via WRDS. Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Access is available by account only &mdash; request account at <a href='https://wrds.wharton.upenn.edu'>https://wrds.wharton.upenn.edu</a></em>]</div></li>
 <li>Thomson Reuters Insider Filing Data Feed <div style='font-size: 90%'>[<em>Note: Access via WRDS. Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Access is available by account only &mdash; request account at <a href='https://wrds.wharton.upenn.edu'>https://wrds.wharton.upenn.edu</a></em>]</div></li>
 <li>Thomson Reuters Mutual Fund Holdings <div style='font-size: 90%'>[<em>Note: Access via WRDS. Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Access is available by account only &mdash; request account at <a href='https://wrds.wharton.upenn.edu'>https://wrds.wharton.upenn.edu</a></em>]</div></li>
+<li>ThomsonOne.com <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a>.</em>]</div></li>
 <li><a href='http://users.cs.jmu.edu/bernstdh/web/tide/index.html'>TIDE'S Directory of Transportation Information</a></li>
 <li><a href='http://www.trade.gov/mas/ian/build/groups/public/@tg_ian/documents/webcontent/tg_ian_003364.pdf'>Top U.S. Trading Partners</a></li>
 <li><a href='http://dir.yahoo.com/Regional/U_S__States/Washington__D_C_/Business_and_Shopping/Business_to_Business/Trade/Trade_Associations/'>Trade Association - Washington, DC in the Yahoo Directory</a></li>
