--- a/output/summary_cats.html
+++ b/output/summary_cats.html
@@ -1,10 +1,4 @@
 <h1>List of All Categories</h1>
-<h2>Business Financing</h2>
-<ul>
-<li>An Overview of Financing Options = 1</li>
-<li>vFinance.com = 2</li>
-<li>Pratt's Guide to Venture Capital Sources = 3</li>
-</ul>
 <h2>Career</h2>
 <ul>
 <li>Occupational Outlook Handbook = 1</li>
@@ -13,24 +7,33 @@
 <li>Factiva = 4</li>
 <li>Testing and Education Reference Center = 5</li>
 </ul>
+<h2>Company</h2>
+<ul>
+<li>LexisNexis Academic = 4</li>
+</ul>
 <h2>Company Information</h2>
 <ul>
-<li>Hoovers Online = 1</li>
+<li>Hoover's Online = 1</li>
 <li>Business Source Complete = 2</li>
 <li>Factiva = 3</li>
 </ul>
-<h2>Country Research</h2>
+<h2>Country Information</h2>
 <ul>
 <li>EIU Viewswire = 1</li>
 <li>Country Commercial Guides = 2</li>
-<li>CIA World Factbook = 3</li>
-<li>Background Notes = 4</li>
-<li>EIU Country Commerce = 5</li>
-<li>EIU Country Finance = 6</li>
+<li>Passport = 3</li>
+<li>CIA World Factbook = 4</li>
+<li>Background Notes = 5</li>
+<li>EIU Country Commerce = 6</li>
+<li>EIU Country Finance = 7</li>
 </ul>
 <h2>Demographics and Statistics</h2>
 <ul>
 <li>American FactFinder = 1</li>
+<li>Data-Planet Statistical Datasets = 2</li>
+<li>Data-Planet Statistical Ready Reference = 3</li>
+<li>EIU Viewswire = 4</li>
+<li>Statistical Abstracts of the United States = 5</li>
 </ul>
 <h2>Economics</h2>
 <ul>
@@ -49,19 +52,20 @@
 <h2>Finance &amp; Investment</h2>
 <ul>
 <li>Bloomberg = 1</li>
-<li>Hoovers Online = 2</li>
-<li>Factiva = 3</li>
+<li>Morningstar = 1</li>
+<li>ValueLine (ValueLine Investment Survey) = 2</li>
+<li>Standard &amp; Poor's Net Advantage = 3</li>
+<li>Hoover's Online = 4</li>
+<li>Factiva = 5</li>
+<li>LexisNexis Academic = 6</li>
 </ul>
 <h2>Industry</h2>
 <ul>
 <li>IBIS World = 1</li>
 <li>Standard &amp; Poor's Net Advantage = 2</li>
-<li>Hoovers Online = 3</li>
+<li>Hoover's Online = 3</li>
 <li>Business Source Complete = 4</li>
 <li>Factiva = 5</li>
-<li>Academic Search Premier = 6</li>
-<li>JSTOR = 7</li>
-<li>WRDS (Wharton Research Data Service) = 8</li>
 </ul>
 <h2>Logistics</h2>
 <ul>
@@ -70,7 +74,11 @@
 </ul>
 <h2>Marketing</h2>
 <ul>
-<li>IBIS World = 1</li>
+<li>Mintel = 1</li>
+<li>IBIS World = 2</li>
+<li>Data-Planet Statistical Datasets = 3</li>
+<li>Business Source Complete = 4</li>
+<li>Mediamark (MRI+) = 5</li>
 </ul>
 <h2>Product</h2>
 <ul>
