--- a/output/summary_topics.html
+++ b/output/summary_topics.html
@@ -13,6 +13,11 @@
 <li>RDS Business Reference Suite = 1</li>
 <li>Business Source Complete = 2</li>
 <li>Mintel = 3</li>
+<li>Ad Access = 4</li>
+<li>Ad Council = 5</li>
+<li>Ad View = 6</li>
+<li>Emergence of Advertising in America, 1850-1920 = 7</li>
+<li>AdFlip = 8</li>
 </ul>
 <h3>Agricultural Economics</h3>
 <ul>
@@ -24,20 +29,22 @@
 <li>Morningstar = 1</li>
 <li>ValueLine (ValueLine Investment Survey) = 2</li>
 <li>RDS Business Reference Suite = 3</li>
+<li>ThomsonOne.com = 5</li>
 <li>Morningstar Direct = 99</li>
 </ul>
 <h3>Annual Reports</h3>
 <ul>
-<li>Hoovers Online = 2</li>
+<li>Hoover's Online = 2</li>
 <li>LexisNexis Academic = 3</li>
 <li>Bloomberg = 4</li>
 <li>Datastream Advance = 5</li>
-<li>EDGAR = 99</li>
-<li>Mergent WebReports = 99</li>
+<li>EDGAR = 6</li>
+<li>Mergent WebReports = 6</li>
+<li>ThomsonOne.com = 7</li>
 </ul>
 <h3>Associations</h3>
 <ul>
-<li>Hoovers Online = 1</li>
+<li>Hoover's Online = 1</li>
 <li>Internet Public Library Associations on the Net = 3</li>
 <li>Gateway to Associations - American Society of Association Executives (ASAE) = 4</li>
 <li>Trade Association - Washington, DC in the Yahoo Directory = 5</li>
@@ -57,7 +64,7 @@
 </ul>
 <h3>Biography</h3>
 <ul>
-<li>Hoovers Online = 1</li>
+<li>Hoover's Online = 1</li>
 <li>Business Source Complete = 2</li>
 <li>Biography and Genealogy Master Index = 3</li>
 <li>LexisNexis Academic = 4</li>
@@ -80,7 +87,10 @@
 </ul>
 <h3>Business Financing</h3>
 <ul>
-<li>PricewaterhouseCoopers: MoneyTree Report = 99</li>
+<li>An Overview of Financing Options = 1</li>
+<li>vFinance.com = 2</li>
+<li>Pratt's Guide to Venture Capital Sources = 3</li>
+<li>PricewaterhouseCoopers: MoneyTree Report = 4</li>
 </ul>
 <h3>Business Opportunities (Government)</h3>
 <ul>
@@ -101,6 +111,7 @@
 <li>BPlans.com = 1</li>
 <li>Small Business Administration = 2</li>
 <li>Business Source Complete = 3</li>
+<li>Service Corps of Retired Executives (SCORE) = 5</li>
 <li>FindLaw Small Business Center = 99</li>
 </ul>
 <h3>Career</h3>
@@ -126,7 +137,7 @@
 </ul>
 <h3>Company Profiles and Research</h3>
 <ul>
-<li>Hoovers Online = 1</li>
+<li>Hoover's Online = 1</li>
 <li>Business Source Complete = 2</li>
 <li>Morningstar = 3</li>
 <li>ValueLine (ValueLine Investment Survey) = 4</li>
@@ -146,7 +157,7 @@
 </ul>
 <h3>Competitors</h3>
 <ul>
-<li>Hoovers Online = 1</li>
+<li>Hoover's Online = 1</li>
 <li>Factiva = 2</li>
 <li>IBIS World = 3</li>
 <li>Mergent Online = 4</li>
@@ -157,9 +168,10 @@
 <li>RDS Business Reference Suite = 9</li>
 <li>Standard &amp; Poor's Net Advantage = 10</li>
 </ul>
-<h3>Consumer Analysis and Research</h3>
+<h3>Consumer Analysis</h3>
 <ul>
 <li>Mintel = 1</li>
+<li>Data-Planet Statistical Datasets = 2</li>
 <li>American FactFinder = 3</li>
 <li>Mediamark (MRI+) = 4</li>
 <li>IBIS World = 5</li>
@@ -170,8 +182,12 @@
 </ul>
 <h3>Consumer Price Index</h3>
 <ul>
-<li>Economagic = 1</li>
-<li>Global Insight (IHS) DataInsight Web = 2</li>
+<li>Data-Planet Statistical Datasets = 1</li>
+<li>Data-Planet Statistical Ready Reference = 2</li>
+<li>Economagic = 3</li>
+<li>Bureau of Labor Statistics = 4</li>
+<li>Federal Reserve Economic Data (FRED) = 5</li>
+<li>Global Insight (IHS) DataInsight Web = 6</li>
 </ul>
 <h3>Controversial Issues</h3>
 <ul>
@@ -245,6 +261,7 @@
 <li>GlobalEdge = 2</li>
 <li>International Business, Etiquette and Manners = 3</li>
 <li>World Business Culture = 4</li>
+<li>Culture Crossing = 99</li>
 <li>LANIC = 99</li>
 </ul>
 <h3>Debt</h3>
@@ -257,8 +274,7 @@
 </ul>
 <h3>Demographics</h3>
 <ul>
-<li>Regional Economic Conditions (RECON) = 1</li>
-<li>Balance of Payments Statistics &ndash; IMF eLibrary &ndash; Data = 99</li>
+<li>American FactFinder = 1</li>
 <li>Data and Statistics: USA.gov = 99</li>
 <li>Data-Planet Statistical Datasets = 99</li>
 <li>Data-Planet Statistical Ready Reference = 99</li>
@@ -268,7 +284,7 @@
 <li>Population and Household = 99</li>
 <li>RFE: Resources for Economists on the Internet = 99</li>
 <li>State Data Centers = 99</li>
-<li>Statistical Abstract of the United States = 99</li>
+<li>Statistical Abstracts of the United States = 99</li>
 <li>Statistical Sites of the World Wide Web = 99</li>
 <li>U.S. Census Bureau = 99</li>
 </ul>
@@ -293,6 +309,7 @@
 <ul>
 <li>Country Commercial Guides = 1</li>
 <li>Directory of American Firms Operating in Foreign Countries/Foreign Firms Operating in U.S = 2</li>
+<li>Passport = 2</li>
 <li>Doing Business Database = 3</li>
 <li>EIU Country Commerce = 4</li>
 <li>EIU Country Finance = 5</li>
@@ -356,6 +373,7 @@
 <h3>Economic Indicators</h3>
 <ul>
 <li>Bureau of Labor Statistics = 1</li>
+<li>Data-Planet Statistical Datasets = 2</li>
 <li>National Bureau of Economic Research (NBER) = 2</li>
 <li>Economagic = 3</li>
 <li>FRB Beige Book = 4</li>
@@ -375,7 +393,7 @@
 <li>World Economic Outlook = 99</li>
 <li>World Bank Data Catalog = 99</li>
 </ul>
-<h3>Economics</h3>
+<h3>Economics Research</h3>
 <ul>
 <li>AgEcon Search = 1</li>
 <li>Annual Review of Economics = 2</li>
@@ -477,47 +495,32 @@
 <li>Statistical Classification of Domestic and Foreign Commodities Exported from the United States (Schedule B) = 99</li>
 <li>Top U.S. Trading Partners = 99</li>
 </ul>
-<h3>Finance &amp; Investment</h3>
-<ul>
-<li>Encyclopedia of Business and Finance = 1</li>
-<li>Morningstar = 99</li>
-<li>Morningstar Direct = 99</li>
-<li>Morningstar EnCorr = 99</li>
-<li>S&amp;P Capital IQ = 99</li>
-<li>Standard &amp; Poor's Net Advantage = 99</li>
-<li>Thomson Reuters Eikon = 99</li>
-<li>Thomson Reuters SDC Platinum = 99</li>
-<li>Thomson Reuters LPC DealScan = 99</li>
-<li>Thomson Reuters Institutional Holdings (13F) = 99</li>
-<li>Thomson Reuters Insider Filing Data Feed = 99</li>
-<li>Thomson Reuters Mutual Fund Holdings = 99</li>
-<li>Wall Street Journal (Factiva) = 99</li>
-</ul>
 <h3>Financial Information</h3>
 <ul>
 <li>EDGAR = 1</li>
-<li>Hoovers Online = 2</li>
+<li>Hoover's Online = 2</li>
 <li>D&amp;B Key Business Ratios = 3</li>
-<li>Datastream Advance = 3</li>
-<li>Factiva = 4</li>
+<li>Datastream Advance = 4</li>
+<li>Factiva = 5</li>
 <li>CRSP: Center for Research in Security Prices = 6</li>
+<li>ThomsonOne.com = 6</li>
 <li>Mergent Online = 8</li>
+<li>Bloomberg = 9</li>
+<li>IHS Global Insight DataInsight Web = 10</li>
 <li>WRDS (Wharton Research Data Service) = 10</li>
-<li>Bloomberg = 99</li>
-<li>IHS Global Insight DataInsight Web = 99</li>
-<li>Institute for the Study of Security Markets (ISSM) = 99</li>
-<li>Standard &amp; Poor's = 99</li>
-<li>Thomson Reuters Eikon = 99</li>
-<li>Thomson Reuters SDC Platinum = 99</li>
-<li>Thomson Reuters Institutional Holdings (13F) = 99</li>
-<li>Thomson Reuters Insider Filing Data Feed = 99</li>
-<li>Thomson Reuters Mutual Fund Holdings = 99</li>
-<li>ValueLine (ValueLine Investment Survey) = 99</li>
+<li>Institute for the Study of Security Markets (ISSM) = 11</li>
+<li>Thomson Reuters Eikon = 13</li>
+<li>Thomson Reuters SDC Platinum = 14</li>
+<li>Thomson Reuters Institutional Holdings (13F) = 15</li>
+<li>Thomson Reuters Insider Filing Data Feed = 16</li>
+<li>Thomson Reuters Mutual Fund Holdings = 17</li>
+<li>ValueLine (ValueLine Investment Survey) = 18</li>
+<li>Morningstar = 19</li>
+<li>WRDS SEC Analytics Suite = 23</li>
 <li>Wachowicz's Web World: Websites for Discerning Finance Students = 99</li>
 <li>Wall Street Journal (Factiva) = 99</li>
 <li>Wall Street Journal, National Newspapers Core (Proquest) = 99</li>
 <li>Wall Street Journal Historical (1889-1991) = 99</li>
-<li>WRDS SEC Analytics Suite = 99</li>
 </ul>
 <h3>Foreign Direct Investment</h3>
 <ul>
@@ -584,17 +587,22 @@
 <li>GlobalEdge = 99</li>
 <li>Top U.S. Trading Partners = 99</li>
 </ul>
-<h3>Industry</h3>
+<h3>Industry Analysis</h3>
 <ul>
-<li>Global Insight (IHS) DataInsight Web = 99</li>
+<li>IBIS World = 1</li>
+<li>Standard &amp; Poor's Net Advantage = 2</li>
+<li>Gartner Group = 3</li>
+<li>Hoover's Online = 4</li>
+<li>Business Source Complete = 5</li>
+<li>Factiva = 6</li>
+<li>LexisNexis Academic = 7</li>
+<li>Passport = 8</li>
+<li>Global Insight (IHS) DataInsight Web = 9</li>
 <li>Mergent WebReports = 99</li>
 <li>Overview of BLS Statistics by Industry = 99</li>
-<li>Passport = 99</li>
 <li>Porter's Five Forces: Assessing the Balance of in a Business Situation = 99</li>
 <li>RDS Business Reference Suite = 99</li>
 <li>Regional Economic Conditions (RECON) = 99</li>
-<li>Standard &amp; Poor's Net Advantage = 99</li>
-<li>Standard Industrial Classification System (SIC) = 99</li>
 <li>Wall Street Journal (Factiva) = 99</li>
 </ul>
 <h3>Industry Classification</h3>
@@ -602,7 +610,7 @@
 <li>North American Industry Classification System (NAICS) = 1</li>
 <li>Standard Industrial Classification System (SIC) = 2</li>
 <li>Factiva = 3</li>
-<li>Hoovers Online = 4</li>
+<li>Hoover's Online = 4</li>
 <li>IBIS World = 5</li>
 <li>Correspondence Tables Between SIC and NAICS = 99</li>
 </ul>
@@ -610,7 +618,7 @@
 <ul>
 <li>IBIS World = 1</li>
 <li>Business Source Complete = 2</li>
-<li>Hoovers Online = 3</li>
+<li>Hoover's Online = 3</li>
 <li>Mergent WebReports = 4</li>
 <li>Gartner Group = 5</li>
 </ul>
@@ -627,7 +635,7 @@
 <ul>
 <li>IBIS World = 1</li>
 <li>Standard &amp; Poor's Net Advantage = 2</li>
-<li>Hoovers Online = 3</li>
+<li>Hoover's Online = 3</li>
 <li>Mintel = 4</li>
 <li>Gartner Group = 5</li>
 </ul>
@@ -707,7 +715,6 @@
 <li>Thomson Reuters LPC DealScan = 15</li>
 <li>Thomson Reuters Institutional Holdings (13F) = 16</li>
 <li>Thomson Reuters Insider Filing Data Feed = 17</li>
-<li>Wachowicz's Web World: Websites for Discerning Finance Students = 18</li>
 </ul>
 <h3>Jobs</h3>
 <ul>
@@ -715,7 +722,7 @@
 <li>Chronicle of Philanthropy = 99</li>
 <li>FedBizOpps.gov (Federal Business Opportunities) = 99</li>
 <li>Fortune's 100 Best Companies to Work For &reg; = 99</li>
-<li>Hoovers Online = 99</li>
+<li>Hoover's Online = 99</li>
 <li>Occupational Outlook Handbook = 99</li>
 <li>U.S. Trade Statistics = 99</li>
 </ul>
@@ -765,7 +772,7 @@
 <h3>Manufacturing</h3>
 <ul>
 <li>ThomasNet = 1</li>
-<li>Hoovers Online = 2</li>
+<li>Hoover's Online = 2</li>
 <li>CREDO = 99</li>
 <li>U.S. Trade Statistics = 99</li>
 <li>Wholesale Distributors Net = 99</li>
@@ -774,6 +781,8 @@
 <ul>
 <li>RDS Business Reference Suite = 1</li>
 <li>IBIS World = 2</li>
+<li>Business Source Complete = 3</li>
+<li>Factiva = 4</li>
 </ul>
 <h3>Market Size</h3>
 <ul>
@@ -957,7 +966,7 @@
 <h3>SEC Filings</h3>
 <ul>
 <li>EDGAR = 1</li>
-<li>Hoovers Online = 99</li>
+<li>Hoover's Online = 99</li>
 <li>WRDS SEC Analytics Suite = 99</li>
 </ul>
 <h3>SIC</h3>
@@ -966,7 +975,8 @@
 </ul>
 <h3>SWOT</h3>
 <ul>
-<li>Business Source Complete = 99</li>
+<li>Business Source Complete = 1</li>
+<li>LexisNexis Academic = 2</li>
 </ul>
 <h3>Small Business</h3>
 <ul>
@@ -1024,7 +1034,7 @@
 <li>Economic Census = 7</li>
 <li>Historical Statistics of the United States = 9</li>
 <li>Overview of BLS Statistics by Industry = 10</li>
-<li>Statistical Abstract of the United States = 11</li>
+<li>Statistical Abstracts of the United States = 11</li>
 <li>Statistical Sites of the World Wide Web = 12</li>
 <li>U.S. Economy at a Glance: Perspectives from the U.S. Department of Commerce = 13</li>
 <li>Zanran: Key Source for Data and Statistics, Graphs, Charts and Tables = 14</li>
@@ -1059,7 +1069,7 @@
 <li>Morningstar = 1</li>
 <li>ValueLine (ValueLine Investment Survey) = 2</li>
 <li>Factiva = 3</li>
-<li>Hoovers Online = 4</li>
+<li>Hoover's Online = 4</li>
 <li>CRSP: Center for Research in Security Prices = 5</li>
 <li>Bloomberg = 6</li>
 <li>Datastream Advance = 7</li>
