--- a/output/index.html
+++ b/output/index.html
@@ -10,7 +10,7 @@
 <li><a href='/vbic/topics#biography'>Biography</a></li>
 <li><a href='/vbic/topics#bonds'>Bonds</a></li>
 <li><a href='/vbic/topics#brands'>Brands</a></li>
-<li><a href='/vbic/business financing'>Business Financing</a></li>
+<li><a href='/vbic/topics#businessfinancing'>Business Financing</a></li>
 <li><a href='/vbic/topics#businessopportunitiesgovernment'>Business Opportunities (Government)</a></li>
 <li><a href='/vbic/topics#businessplanning'>Business Planning</a></li>
 <li><a href='/vbic/topics#businessplans'>Business Plans</a></li>
@@ -18,18 +18,20 @@
 <li><a href='/vbic/topics#casestudies'>Case Studies</a></li>
 <li><a href='/vbic/topics#citationdatabase'>Citation Database</a></li>
 <li><a href='/vbic/topics#citations'>Citations</a></li>
+<li><a href='/vbic/company'>Company</a></li>
 <li><a href='/vbic/company information'>Company Information</a></li>
 <li><a href='/vbic/topics#companyprofilesandresearch'>Company Profiles and Research</a></li>
 <li><a href='/vbic/topics#compensation'>Compensation</a></li>
 <li><a href='/vbic/topics#competitors'>Competitors</a></li>
-<li><a href='/vbic/topics#consumeranalysisandresearch'>Consumer Analysis and Research</a></li>
+<li><a href='/vbic/topics#consumeranalysis'>Consumer Analysis</a></li>
 <li><a href='/vbic/topics#consumerpriceindex'>Consumer Price Index</a></li>
 <li><a href='/vbic/topics#controversialissues'>Controversial Issues</a></li>
 <li><a href='/vbic/topics#copyright'>Copyright</a></li>
 <li><a href='/vbic/topics#corporateculture'>Corporate Culture</a></li>
 <li><a href='/vbic/topics#countrybackground'>Country Background</a></li>
 <li><a href='/vbic/topics#countrydata'>Country Data</a></li>
-<li><a href='/vbic/country research'>Country Research</a></li>
+<li><a href='/vbic/country information'>Country Information</a></li>
+<li><a href='/vbic/topics#countryresearch'>Country Research</a></li>
 <li><a href='/vbic/topics#culture'>Culture</a></li>
 <li><a href='/vbic/topics#debt'>Debt</a></li>
 <li><a href='/vbic/topics#demographics'>Demographics</a></li>
@@ -48,6 +50,7 @@
 <li><a href='/vbic/topics#economicdataunitedstates'>Economic Data: United States</a></li>
 <li><a href='/vbic/topics#economicindicators'>Economic Indicators</a></li>
 <li><a href='/vbic/economics'>Economics</a></li>
+<li><a href='/vbic/topics#economicsresearch'>Economics Research</a></li>
 <li><a href='/vbic/topics#employment'>Employment</a></li>
 <li><a href='/vbic/topics#encyclopedia'>Encyclopedia</a></li>
 <li><a href='/vbic/entrepreneurship'>Entrepreneurship</a></li>
@@ -65,6 +68,7 @@
 <li><a href='/vbic/topics#humanresourcemanagement'>Human Resource Management</a></li>
 <li><a href='/vbic/topics#import'>Import</a></li>
 <li><a href='/vbic/industry'>Industry</a></li>
+<li><a href='/vbic/topics#industryanalysis'>Industry Analysis</a></li>
 <li><a href='/vbic/topics#industryclassification'>Industry Classification</a></li>
 <li><a href='/vbic/topics#industryoverview'>Industry Overview</a></li>
 <li><a href='/vbic/topics#industryratios'>Industry Ratios</a></li>
