--- a/output/rel-com.html
+++ b/output/rel-com.html
@@ -4,7 +4,7 @@
 <li><a href='/vbic/topics#annualreports'>Annual Reports</a></li>
 <li><a href='/vbic/topics#companyprofilesandresearch'>Company Profiles and Research</a></li>
 <li><a href='/vbic/topics#competitors'>Competitors</a></li>
-<li><a href='/vbic/topics#financialinformation'>Financial information</a></li>
+<li><a href='/vbic/topics#financialinformation'>Financial Information</a></li>
 <li><a href='/vbic/topics#internationalbusiness'>International Business</a></li>
 <li><a href='/vbic/topics#investmentandsecurities'>Investment and Securities</a></li>
 <li><a href='/vbic/topics#manufacturing'>Manufacturing</a></li>
