--- a/output/rel-eco.html
+++ b/output/rel-eco.html
@@ -3,7 +3,7 @@
 <li><a href='/vbic/topics#consumerpriceindex'>Consumer Price Index</a></li>
 <li><a href='/vbic/topics#demographics'>Demographics</a></li>
 <li><a href='/vbic/topics#economicindicators'>Economic Indicators</a></li>
+<li><a href='/vbic/topics#economicsresearch'>Economics Research</a></li>
 <li><a href='/vbic/topics#industryclassification'>Industry Classification</a></li>
-<li><a href='/vbic/topics#laboreconomics'>Labor Economics</a></li>
 <li><a href='/vbic/topics#news'>News</a></li>
 </ul>
