--- a/output/rel-fin.html
+++ b/output/rel-fin.html
@@ -1,9 +1,11 @@
 <h3>Related Topics</h3>
 <ul>
 <li><a href='/vbic/topics#analystreports'>Analyst Reports</a></li>
+<li><a href='/vbic/topics#annualreports'>Annual Reports</a></li>
 <li><a href='/vbic/topics#bonds'>Bonds</a></li>
+<li><a href='/vbic/topics#financialinformation'>Financial Information</a></li>
 <li><a href='/vbic/topics#industryratios'>Industry Ratios</a></li>
-<li><a href='/vbic/topics#investments'>Investments</a></li>
+<li><a href='/vbic/topics#investmentandsecurities'>Investment and Securities</a></li>
 <li><a href='/vbic/topics#mutualfunds'>Mutual Funds</a></li>
 <li><a href='/vbic/topics#stocks'>Stocks</a></li>
 <li><a href='/vbic/topics#stockexchange'>Stock Exchange</a></li>
