remove deleted categories, add heading to category pages

--- a/output/Cou.html
+++ b/output/Cou.html
@@ -1,3 +1,4 @@
+<h2>Frequently Used Sources</h2>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.viewswire.com/'>EIU Viewswire</a></b></p>
 <p>From The Economist Intelligence Unit, provides economic, political, and market developments for 195 countries as well as analysis on the implications for business.</p>
 <p><b><a href='http://www.buyusainfo.net/adsearch.cfm?search_type=int&loadnav=no'>Country Commercial Guides</a></b></p>
