--- a/output/Dem.html
+++ b/output/Dem.html
@@ -1,3 +1,4 @@
+<h2>Frequently Used Sources</h2>
 <p><b><a href='http://factfinder2.census.gov/faces/nav/jsf/pages/index.xhtml'>American FactFinder</a></b></p>
 <p>From the U.S. Census Bureau. Provides U.S. population, housing, economic and geographic data.</p>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://data-planet.conquestsystems.com/statistical/ip'>Data-Planet Statistical Datasets</a></b></p>
