--- a/output/Fin.html
+++ b/output/Fin.html
@@ -1,3 +1,4 @@
+<h2>Frequently Used Sources</h2>
 <p><b>Bloomberg</b></p>
 <div style='font-size: 90%'><p><em>Note: Access via the Bloomberg terminals in 1318 Van Munching Hall.</em></p></div>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
