--- a/output/Ind.html
+++ b/output/Ind.html
@@ -1,3 +1,4 @@
+<h2>Frequently Used Sources</h2>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.ibisworld.com/'>IBIS World</a></b></p>
 <p>Provides Industry market research reports on over 700 U.S. industries, as well as economic and demographic reports with focus on the U.S. economy, also available through SmithApps.</p>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.netadvantage.standardpoor.com/'>Standard &amp; Poor's Net Advantage</a></b></p>
