--- a/output/Mar.html
+++ b/output/Mar.html
@@ -1,3 +1,4 @@
+<h2>Frequently Used Sources</h2>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://academic.mintel.com/sinatra/oxygen_academic/academic_logon/'>Mintel</a></b></p>
 <p>Provides full-text reports on a wide range of market research studies, analyzing market sizes and trends, market segmentation, consumer attitudes and purchasing habits, opportunities, weaknesses and the future of the market. Note: To download reports, authorized users are required to create a personal account.</p>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.ibisworld.com/'>IBIS World</a></b></p>
