--- a/output/index.html
+++ b/output/index.html
@@ -14,11 +14,10 @@
 <li><a href='/vbic/topics#businessopportunitiesgovernment'>Business Opportunities (Government)</a></li>
 <li><a href='/vbic/topics#businessplanning'>Business Planning</a></li>
 <li><a href='/vbic/topics#businessplans'>Business Plans</a></li>
-<li><a href='/vbic/career'>Career</a></li>
+<li><a href='/vbic/topics#career'>Career</a></li>
 <li><a href='/vbic/topics#casestudies'>Case Studies</a></li>
 <li><a href='/vbic/topics#citationdatabase'>Citation Database</a></li>
 <li><a href='/vbic/topics#citations'>Citations</a></li>
-<li><a href='/vbic/company'>Company</a></li>
 <li><a href='/vbic/company information'>Company Information</a></li>
 <li><a href='/vbic/topics#companyprofilesandresearch'>Company Profiles and Research</a></li>
 <li><a href='/vbic/topics#compensation'>Compensation</a></li>
@@ -82,7 +81,7 @@
 <li><a href='/vbic/topics#law'>Law</a></li>
 <li><a href='/vbic/topics#leadership'>Leadership</a></li>
 <li><a href='/vbic/topics#lifestyles'>Lifestyles</a></li>
-<li><a href='/vbic/logistics'>Logistics</a></li>
+<li><a href='/vbic/topics#logistics'>Logistics</a></li>
 <li><a href='/vbic/topics#management'>Management</a></li>
 <li><a href='/vbic/topics#manufacturing'>Manufacturing</a></li>
 <li><a href='/vbic/topics#marketshare'>Market Share</a></li>
@@ -102,7 +101,6 @@
 <li><a href='/vbic/topics#philanthropy'>Philanthropy</a></li>
 <li><a href='/vbic/topics#polls'>Polls</a></li>
 <li><a href='/vbic/topics#ports'>Ports</a></li>
-<li><a href='/vbic/product'>Product</a></li>
 <li><a href='/vbic/topics#productcodes'>Product Codes</a></li>
 <li><a href='/vbic/topics#productdevelopment'>Product Development</a></li>
 <li><a href='/vbic/topics#publicpolicy'>Public Policy</a></li>
