--- a/output/summary_topics.html
+++ b/output/summary_topics.html
@@ -116,9 +116,13 @@
 </ul>
 <h3>Career</h3>
 <ul>
+<li>Occupational Outlook Handbook = 1</li>
+<li>Business Source Complete = 2</li>
+<li>IBIS World = 3</li>
+<li>Factiva = 4</li>
+<li>Testing and Education Reference Center = 5</li>
 <li>Academic Search Premier = 99</li>
 <li>RDS Business Reference Suite = 99</li>
-<li>Testing and Education Reference Center = 99</li>
 <li>Volunteer Today = 99</li>
 </ul>
 <h3>Case Studies</h3>
@@ -753,11 +757,12 @@
 </ul>
 <h3>Logistics</h3>
 <ul>
-<li>Logistics Performance Index (LPI) = 1</li>
-<li>Academic Search Premier = 99</li>
-<li>PortFocus: Ports Harbours Marinas Worldwide = 99</li>
-<li>RDS Business Reference Suite = 99</li>
-<li>TIDE'S Directory of Transportation Information = 99</li>
+<li>Academic Search Premier = 1</li>
+<li>Logistics Performance Index (LPI) = 2</li>
+<li>Business Source Complete = 3</li>
+<li>PortFocus: Ports Harbours Marinas Worldwide = 4</li>
+<li>RDS Business Reference Suite = 5</li>
+<li>TIDE'S Directory of Transportation Information = 6</li>
 </ul>
 <h3>Management</h3>
 <ul>
@@ -792,12 +797,9 @@
 <h3>Marketing</h3>
 <ul>
 <li>Market Research Library = 1</li>
-<li>Mintel = 2</li>
-<li>IBIS World = 3</li>
 <li>Encyclopedia of Business and Finance = 99</li>
 <li>Google Scholar = 99</li>
 <li>JSTOR = 99</li>
-<li>Mediamark (MRI+) = 99</li>
 <li>RDS Business Reference Suite = 99</li>
 </ul>
 <h3>Marketing Plans</h3>
