final file cleanup

--- a/output/res-by-title.html
+++ b/output/res-by-title.html
@@ -176,7 +176,7 @@
 <li><a href='http://www.buyusainfo.net/'>Market Research Library</a></li>
 <li><a href='http://www.freedomhouse.org/report/nations-transit/nations-transit-2012'>Media Freedom: Freedom House - Nations in Transit - Country Reports</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mriplus.com/'>Mediamark (MRI+)</a></li>
-<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Mergent Online</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu.</em>]</div></li>
+<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Mergent Online</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a>.</em>]</div></li>
 <li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Mergent WebReports</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu</em>]</div></li>
 <li><a href='http://www.research.fsu.edu/techtransfer/documents/mnei.pdf'>Metropolitan New Economy Index</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://academic.mintel.com/sinatra/oxygen_academic/academic_logon/'>Mintel</a></li>
